--- a/securegroups/templates/smartgroups/user_check.html
+++ b/securegroups/templates/smartgroups/user_check.html
@@ -16,5 +16,5 @@
 </table>
 
 <div class="col-sm-12">
-    <a class="btn btn-primary col-md-12" {% if pass_checks %}href="{% url 'securegroups:request_add' group_id %}">Join Group{% else %} disabled>Ineligable{% endif %}</a>
+    <a class="btn btn-primary col-md-12" {% if pass_checks %}href="{% url 'securegroups:request_add' group_id %}">Join Group{% else %} disabled>Ineligible{% endif %}</a>
 </div>
