--- a/securegroups/templates/smartgroups/audit_list.html
+++ b/securegroups/templates/smartgroups/audit_list.html
@@ -12,7 +12,7 @@
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                {% trans "Smart Groups" %}
+                {% trans "Secure Groups" %}
             </div>
 
             <div class="panel-body">
