--- a/securegroups/templates/smartgroups/menu.html
+++ b/securegroups/templates/smartgroups/menu.html
@@ -11,7 +11,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'securegroups:audit_list' %}">{% trans "Smart Group Audit" %}</a>
+            <a class="navbar-brand" href="{% url 'securegroups:audit_list' %}">{% trans "Secure Group Audit" %}</a>
         </div>
     </div>
 </nav>
