--- a/securegroups/templates/smartgroups/audit.html
+++ b/securegroups/templates/smartgroups/audit.html
@@ -5,6 +5,8 @@
 
 {% block page_title %}{% trans "Group Audit" %}{% endblock page_title %}
 {% block extra_css %}
+{% include 'bundles/datatables-css.html' %}
+
 <style>
 .form-control {
     margin: 2px;
@@ -85,7 +87,7 @@ table.dataTable tbody td {
             </div>
 
             <div class="panel-body">
-                <table class="table table-aa">
+                <table class="table table-aa datatables" id="audit-table">
                     <thead>
                         <tr>
                             <th class="">{% trans "User" %}</th>
@@ -109,13 +111,15 @@ table.dataTable tbody td {
         </div>
     </div>
 {% endblock content %}
+{% block extra_javascript %}
+  {% include 'bundles/datatables-js.html' %}
+	<script>!function(t){function e(t){var e={columns:[],columnsIdxList:[],bootstrap:!1,autoSize:!0,label:"Filter "};if("bootstrap"in t&&"boolean"==typeof t.bootstrap&&(e.bootstrap=t.bootstrap),"autoSize"in t&&"boolean"==typeof t.autoSize&&(e.autoSize=t.autoSize),"label"in t&&"string"==typeof t.label&&(e.label=t.label),"columns"in t)for(var i=0;i<t.columns.length;i++){var n=t.columns[i];if("idx"in n&&"number"==typeof n.idx){var o=n.idx;e.columns[o]={title:null,maxWidth:null,autoSize:!0},e.columnsIdxList.push(o),"title"in n&&"string"==typeof n.title&&(e.columns[o].title=n.title),"maxWidth"in n&&"string"==typeof n.maxWidth&&(e.columns[o].maxWidth=n.maxWidth),"autoSize"in n&&"boolean"==typeof n.autoSize&&(e.columns[o].autoSize=n.autoSize)}}return e}t(document).on("preInit.dt",function(i,n){if("dt"===i.namespace){var o=new t.fn.dataTable.Api(n),a=o.table().node().id,l=o.init();if("filterDropDown"in l){var r=e(l.filterDropDown);if(0!=r.columns.length){var u=o.table().container(),s=a+"_filterWrapper",c=s+" "+(r.bootstrap?"form-inline":"");t(u).prepend('<div id="'+s+'" class="'+c+'">'+r.label+"</div>"),o.columns(r.columnsIdxList).every(function(){var e=this.index(),i=null!==r.columns[e].title?r.columns[e].title:t(this.header()).html();""==i&&(i="column "+(e+1));var n="form-control "+a+"_filterSelect",o=a+"_filterSelect"+e;t("#"+s).append('<select id="'+o+'" class="'+n+'"></select>');var l=t("#"+o).empty().append('<option value="">('+i+")</option>");})}}}}),t(document).on("init.dt",function(i,n){if("dt"===i.namespace){var o=new t.fn.dataTable.Api(n),a=o.table().node().id,l=o.init();if("filterDropDown"in l){var r=e(l.filterDropDown);o.table().container();o.columns(r.columnsIdxList).every(function(){var e=this,i=e.index(),n=t("#"+(a+"_filterSelect"+i));n.on("change",function(){var i=t.fn.dataTable.util.escapeRegex(t(this).val());e.search(i?"^"+i+"$":"",!0,!1).draw()}),e.data().unique().sort().each(function(t,e){""!=t&&n.append('<option value="'+t+'">'+t+"</option>")})})}}})}(jQuery);</script>
+
+{% endblock %}
 
 {% block extra_script %}
 
 $(document).ready(function() {
-    var failure_check = '<a class="label label-danger" type="button" data-toggle="tooltip" rel="tooltip" data-placement="top" title="" data-original-title="" data-html="true"><i class="fas fa-times-circle"></i></a>';
-    var pass_check = '<a class="label label-success" type="button" data-toggle="tooltip" rel="tooltip" data-placement="top" title="" data-original-title="" data-html="true"><i class="fas fa-check-circle"></i></a>';
-
 
     function load_filter(filter_id){
         var url = "{% url 'securegroups:audit_check' sg.id 1234567890 %}";
@@ -132,19 +136,21 @@ $(document).ready(function() {
 
 
     function update_cell(data) {
-        console.log(data);
         uid = data.uid;
         fid = data.fid;
         result = data.result;
         message = data.message;
         tag = "#" + uid + "_" + fid;
         cell_body = $(tag)[0];
-        if (result) {
-            cell_body.innerHTML = pass_check.replace('data-original-title=""', 'data-original-title="' + message + '"');
+        if (result == null){
+          cell_body.innerHTML = `<a class="label label-default" type="button" data-toggle="tooltip" rel="tooltip${fid}" data-placement="top" title="" data-original-title="Error in Filter"><i class="fas fa-question"></i></a>`;
+        }else if (result == true) {
+            cell_body.innerHTML = `<a class="label label-success" type="button" data-toggle="tooltip" rel="tooltip${fid}" data-placement="top" title="" data-original-title="${message}" data-html="true"><i class="fas fa-check-circle"></i></a>`;
         } else {
-            cell_body.innerHTML = failure_check.replace('data-original-title=""', 'data-original-title="' + message + '"');
+            cell_body.innerHTML = `<a class="label label-danger" type="button" data-toggle="tooltip" rel="tooltip${fid}" data-placement="top" title="" data-original-title="${message}" data-html="true"><i class="fas fa-times-circle"></i></a>`;
         }
-        $("[rel='tooltip']").tooltip();
+        ts = "tooltip" + fid
+        $("[rel="+ts+"]").tooltip();
 
     };
 
@@ -157,5 +163,20 @@ $(document).ready(function() {
     {% for fltr in filters %}
     load_filter({{fltr.id}});
     {% endfor %}
+
+    $('#audit-table').DataTable({
+      "filterDropDown": {
+        columns: [],
+          },
+      "columnDefs": [
+          { "searchable": true, "targets": [0] },
+          { "sortable": true, "targets": [0] }
+      ],
+      "order": [
+          [0, "asc"]
+      ],
+      "pageLength": 25,
+      "responsive" : true
+  });
 });
 {% endblock %}
