--- a/securegroups/templates/smartgroups/audit.html
+++ b/securegroups/templates/smartgroups/audit.html
@@ -17,12 +17,12 @@
 .lds-ellipsis {
   display: inline-block;
   position: relative;
-  width: 30px;
+  width: 25px;
   height: 10px;
 }
 .lds-ellipsis div {
   position: absolute;
-  top: 5px;
+  top: 3px;
   width: 5px;
   height: 5px;
   border-radius: 50%;
@@ -113,7 +113,7 @@ table.dataTable tbody td {
 
                                 {% for fv in filters %}
                                     <td class="text-center" id="{{ u }}_{{ fv.id }}">
-                                        <div class="text-center"><div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div></div>
+                                        <div class="label label-default text-center"><div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div></div>
                                     </td>
                                 {% endfor %}
                             </tr>
