--- a/securegroups/templates/smartgroups/audit_list.html
+++ b/securegroups/templates/smartgroups/audit_list.html
@@ -25,6 +25,7 @@
                                     <th>{% trans "Description" %}</th>
                                     <th class="text-center">{% trans "Status" %}</th>
                                     <th class="text-center">{% trans "Member Count" %}</th>
+                                    <th class="text-center">{% trans "Pending Removal" %}</th>
                                     <th style="white-space: nowrap;"></th>
                                 </tr>
                             </thead>
@@ -48,6 +49,9 @@
 
                                         <td class="text-center">
                                             {{ sg.num_members }}
+                                        </td>
+                                        <td class="text-center">
+                                            {{ sg.pending_rem }}
                                         </td>
                                         <td class="text-right">
                                             <a href="{% url 'securegroups:audit' sg.id %}" class="btn btn-primary" title="{% trans "Audit Members" %}">
