--- a/securegroups/templates/smartgroups/groups.html
+++ b/securegroups/templates/smartgroups/groups.html
@@ -29,7 +29,8 @@
                 <tbody>
                     {% for g in groups %}
                         <tr>
-                            <td class="text-center">{{ g.smart_group.group.name }}</td>
+                            <td class="text-center">{{ g.smart_group.group.name }}{% if g.grace_msg %}<br><span rel="tooltip" class="label label-warning" data-toggle="tooltip" data-placement="top" data-html="true" title data-original-title="{{g.grace_msg}}">Pending Removal</span>{% endif %}</td>
+</td>
                             <td class="text-center">{{ g.smart_group.group.authgroup.description|urlize }}<br>{{ g.smart_group.description|urlize }}</td>
                             <td class="text-center">
                                 {% if g.smart_group.group in user.groups.all %}
@@ -87,4 +88,9 @@ $(".check-user-button").on("click", function() {
         $("#modal-main").modal();
     });
 });
+$(document).ready(function() {
+    $("[rel='tooltip']").tooltip();
+    }
+)
+
 {% endblock %}
