remove dead link

--- a/securegroups/templates/smartgroups/audit_list.html
+++ b/securegroups/templates/smartgroups/audit_list.html
@@ -57,7 +57,7 @@
                                             <a href="{% url 'securegroups:audit' sg.id %}" class="btn btn-primary" title="{% trans "Audit Members" %}">
                                                 <i class="glyphicon glyphicon-eye-open"></i>
                                             </a>
-                                            <a href="{% url 'groupmanagement:membership' sg.id %}" class="btn btn-primary" title="{% trans "Request Update" %}">
+                                            <a href="#" class="btn btn-primary" title="{% trans "Request Update" %}">
                                                 <i class="glyphicon glyphicon-refresh"></i>
                                             </a>
                                         </td>
