--- a/securegroups/templates/smartgroups/groups.html
+++ b/securegroups/templates/smartgroups/groups.html
@@ -3,7 +3,17 @@
 {% load i18n %}
 
 {% block page_title %}{% trans "Available Groups" %}{% endblock page_title %}
-{% block extra_css %}{% endblock extra_css %}
+{% block extra_css %}
+<style>
+    @media (min-width: 768px)
+    {
+        .modal-dialog {
+            width: 800px;
+            margin: 30px auto;
+        }
+    }
+</style>
+{% endblock extra_css %}
 {% block content %}
     <div class="col-lg-12">
         <h1 class="page-header text-center">{% trans "Available Groups" %}</h1>
@@ -19,7 +29,8 @@
                 <tbody>
                     {% for g in groups %}
                         <tr>
-                            <td class="text-center">{{ g.smart_group.group.name }}</td>
+                            <td class="text-center">{{ g.smart_group.group.name }}{% if g.grace_msg %}<br><span rel="tooltip" class="label label-warning" data-toggle="tooltip" data-placement="top" data-html="true" title data-original-title="{{g.grace_msg}}">Pending Removal</span>{% endif %}</td>
+</td>
                             <td class="text-center">{{ g.smart_group.group.authgroup.description|urlize }}<br>{{ g.smart_group.description|urlize }}</td>
                             <td class="text-center">
                                 {% if g.smart_group.group in user.groups.all %}
@@ -77,4 +88,9 @@ $(".check-user-button").on("click", function() {
         $("#modal-main").modal();
     });
 });
+$(document).ready(function() {
+    $("[rel='tooltip']").tooltip();
+    }
+)
+
 {% endblock %}
