fix the pending buttons

--- a/securegroups/templates/smartgroups/groups.html
+++ b/securegroups/templates/smartgroups/groups.html
@@ -1,7 +1,6 @@
 {% extends "allianceauth/base.html" %}
 {% load static %}
 {% load i18n %}
-
 {% block page_title %}{% trans "Available Groups" %}{% endblock page_title %}
 {% block extra_css %}
 <style>
@@ -29,8 +28,7 @@
                 <tbody>
                     {% for g in groups %}
                         <tr>
-                            <td class="text-center">{{ g.smart_group.group.name }}{% if g.grace_msg %}<br><span rel="tooltip" class="label label-warning" data-toggle="tooltip" data-placement="top" data-html="true" title data-original-title="{{g.grace_msg}}">Pending Removal</span>{% endif %}</td>
-</td>
+                            <td class="text-center">{{ g.smart_group.group.name }}{% if g.grace_msg %}<br><span rel="tooltip" class="label label-warning" data-toggle="tooltip" data-placement="top" data-html="true" title data-original-title="{{g.grace_msg}}">Pending Removal</span>{% endif %}</td></td>
                             <td class="text-center">{{ g.smart_group.group.authgroup.description|urlize }}<br>{{ g.smart_group.description|urlize }}</td>
                             <td class="text-center">
                                 {% if g.smart_group.group in user.groups.all %}
@@ -40,16 +38,16 @@
                                         </a>
                                     {% else %}
                                         <button type="button" class="btn btn-primary" disabled>
-                                            {{ g.request.status }}
+                                            {% translate "Pending" %}
                                         </button>
                                     {% endif %}
                                 {% elif not g.request %}
                                     <a id="{{ g.smart_group.group.id }}" class="btn btn-primary check-user-button">
-                                        {% trans "Request" %}
+                                        {% translate "Request" %}
                                     </a>
                                 {% else %}
                                     <button type="button" class="btn btn-primary" disabled>
-                                        {{ g.request.status }}
+                                        {% translate "Pending" %}
                                     </button>
                                 {% endif %}
                             </td>
