--- a/securegroups/templates/smartgroups/user_check.html
+++ b/securegroups/templates/smartgroups/user_check.html
@@ -17,6 +17,6 @@
 {% endfor %}
 </table>
 
-<div class="col-sm-12">
-    <a class="btn btn-primary col-md-12" {% if pass_checks %}href="{% url 'securegroups:request_add' group_id %}">Join Group{% else %} disabled>Ineligible{% endif %}</a>
+<div class="col-xs-12">
+    <a class="btn btn-{% if pass_checks %}primary{% else %}warning{% endif %} col-xs-12" {% if pass_checks %}href="{% url 'securegroups:request_add' group_id %}">Join Group{% else %} disabled>Ineligible{% endif %}</a>
 </div>
