--- a/securegroups/templates/smartgroups/audit_list.html
+++ b/securegroups/templates/smartgroups/audit_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 
-{% block page_title %}{% trans "Smart Group Audit" %}{% endblock page_title %}
+{% block page_title %}{% translate "Smart Group Audit" %}{% endblock page_title %}
 {% block extra_css %}{% endblock extra_css %}
 
 {% block content %}
@@ -12,7 +12,7 @@
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                {% trans "Secure Groups" %}
+                {% translate "Secure Groups" %}
             </div>
 
             <div class="panel-body">
@@ -21,11 +21,11 @@
                         <table class="table table-aa">
                             <thead>
                                 <tr>
-                                    <th>{% trans "Name" %}</th>
-                                    <th>{% trans "Description" %}</th>
-                                    <th class="text-center">{% trans "Status" %}</th>
-                                    <th class="text-center">{% trans "Member Count" %}</th>
-                                    <th class="text-center">{% trans "Pending Removal" %}</th>
+                                    <th>{% translate "Name" %}</th>
+                                    <th>{% translate "Description" %}</th>
+                                    <th class="text-center">{% translate "Status" %}</th>
+                                    <th class="text-center">{% translate "Member Count" %}</th>
+                                    <th class="text-center">{% translate "Pending Removal" %}</th>
                                     <th style="white-space: nowrap;"></th>
                                 </tr>
                             </thead>
@@ -56,10 +56,10 @@
                                             {{ sg.pending_rem }}
                                         </td>
                                         <td class="text-right">
-                                            <a href="{% url 'securegroups:audit' sg.id %}" class="btn btn-primary" title="{% trans "Audit Members" %}">
+                                            <a href="{% url 'securegroups:audit' sg.id %}" class="btn btn-primary" title="{% translate "Audit Members" %}">
                                                 <i class="glyphicon glyphicon-eye-open"></i>
                                             </a>
-                                            <a href="{% url 'securegroups:update_group' sg.id %}" class="btn btn-primary" title="{% trans "Request Update" %}">
+                                            <a href="{% url 'securegroups:update_group' sg.id %}" class="btn btn-primary" title="{% translate "Request Update" %}">
                                                 <i class="glyphicon glyphicon-refresh"></i>
                                             </a>
                                         </td>
@@ -71,7 +71,7 @@
                     </div>
                 {% else %}
                     <div class="alert alert-warning text-center">
-                        {% trans "No groups to list." %}
+                        {% translate "No groups to list." %}
                     </div>
                 {% endif %}
             </div>
