--- a/securegroups/templates/smartgroups/groups_bs5.html
+++ b/securegroups/templates/smartgroups/groups_bs5.html
@@ -44,8 +44,8 @@
                         <td>{{ g.smart_group.group.name }}</td>
                         <td>{{ g.smart_group.group.authgroup.description|linebreaks|urlize }}</td>
                         <td style="max-width: 30%;">
-                            {% for leader in g.smart_group.group.authgroup.group_leaders.all %}{% if leader.profile.main_character %}<span class="m-1 fw-lighter badge bg-primary">{{leader.profile.main_character}}</span>{% endif %}{% endfor %}
-                            {% for group in g.smart_group.group.authgroup.group_leader_groups.all %}<span class="m-1 fw-lighter badge bg-secondary">{{group.name}}</span>{% endfor %}
+                            {% for leader in g.smart_group.group.authgroup.group_leaders.all %}{% if leader.profile.main_character %}<span class="my-1 me-1 badge bg-primary">{{leader.profile.main_character}}</span>{% endif %}{% endfor %}
+                            {% for group in g.smart_group.group.authgroup.group_leader_groups.all %}<span class="my-1 me-1 badge bg-secondary">{{group.name}}</span>{% endfor %}
                         </td>
                         <td class="text-end">
                             {% if g.smart_group.group in user.groups.all %}
