--- a/securegroups/templates/smartgroups/filter_list.html
+++ b/securegroups/templates/smartgroups/filter_list.html
@@ -7,11 +7,14 @@
             <th class="text-right">{% translate 'Result' %}</th>
         </tr>
     </thead>
-{% for filter in filters %}
-    <tr>
-        <td>{{ filter.name }}</td>
-        <td class="text-center">{{ filter.message|safe }}</td>
-        <td>{% if filter.check %}<a class="pull-right btn btn-success" type="button" ><i class="fas fa-check-circle"></i></a>{% else %}<a class="pull-right btn btn-danger" type="button" ><i class="fas fa-times-circle"></i></a>{% endif %}</td>
-    </tr>
-{% endfor %}
+
+    <tbody>
+        {% for filter in filters %}
+            <tr>
+                <td>{{ filter.name }}</td>
+                <td class="text-center">{{ filter.message|safe }}</td>
+                <td>{% if filter.check %}<a class="pull-right btn btn-success" type="button" ><i class="fas fa-check-circle"></i></a>{% else %}<a class="pull-right btn btn-danger" type="button" ><i class="fas fa-times-circle"></i></a>{% endif %}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
 </table>
