--- a/securegroups/templates/smartgroups/user_check_bs5.html
+++ b/securegroups/templates/smartgroups/user_check_bs5.html
@@ -10,13 +10,16 @@
             <th class="text-end">{% translate 'Result' %}</th>
         </tr>
     </thead>
-{% for filter in filters %}
-    <tr>
-        <td>{{ filter.name }}</td>
-        <td class="text-center">{{ filter.message|safe }}</td>
-        <td class="text-end">{% if filter.check %}<a class="btn btn-success" type="button" ><i class="fas fa-check-circle"></i></a>{% else %}<a class="text-end btn btn-danger" type="button" ><i class="fas fa-times-circle"></i></a>{% endif %}</td>
-    </tr>
-{% endfor %}
+
+    <tbody>
+        {% for filter in filters %}
+            <tr>
+                <td>{{ filter.name }}</td>
+                <td class="text-center">{{ filter.message|safe }}</td>
+                <td class="text-end">{% if filter.check %}<a class="btn btn-success" type="button" ><i class="fas fa-check-circle"></i></a>{% else %}<a class="text-end btn btn-danger" type="button" ><i class="fas fa-times-circle"></i></a>{% endif %}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
 </table>
 
 <div class="w-100">
