[REMOVE] Rogue class attribute

--- a/securegroups/templates/smartgroups/groups_bs5.html
+++ b/securegroups/templates/smartgroups/groups_bs5.html
@@ -38,7 +38,7 @@
                 </tr>
             </thead>
 
-            <tbody class>
+            <tbody>
                 {% for g in groups %}
                     <tr>
                         <td>{{ g.smart_group.group.name }}</td>
