[REMOVE] Rogue closing td

--- a/securegroups/templates/smartgroups/groups.html
+++ b/securegroups/templates/smartgroups/groups.html
@@ -31,7 +31,7 @@
                 <tbody>
                     {% for g in groups %}
                         <tr>
-                            <td class="text-center">{{ g.smart_group.group.name }}{% if g.grace_msg %}<br><span rel="tooltip" class="label label-warning" data-toggle="tooltip" data-placement="top" data-html="true" title data-original-title="{{g.grace_msg}}">{% translate 'Pending Removal' %}</span>{% endif %}</td></td>
+                            <td class="text-center">{{ g.smart_group.group.name }}{% if g.grace_msg %}<br><span rel="tooltip" class="label label-warning" data-toggle="tooltip" data-placement="top" data-html="true" title data-original-title="{{g.grace_msg}}">{% translate 'Pending Removal' %}</span>{% endif %}</td>
                             <td class="text-center">{{ g.smart_group.group.authgroup.description|urlize }}<br>{{ g.smart_group.description|urlize }}</td>
                             <td class="text-center">
                                 {% for leader in g.smart_group.group.authgroup.group_leaders.all %}{% if leader.profile.main_character %}<span class="label label-primary">{{leader.profile.main_character}}</span>{% endif %}{% endfor %}
