[ADD] Strings to be translatable

--- a/securegroups/templates/smartgroups/groups_bs5.html
+++ b/securegroups/templates/smartgroups/groups_bs5.html
@@ -33,7 +33,7 @@
                 <tr>
                     <th>{% translate "Name" %}</th>
                     <th>{% translate "Description" %}</th>
-                    <th>{% translate "Leaders" %}<span class="m-1 fw-lighter badge bg-primary">User</span><span class="m-1 fw-lighter badge bg-secondary ">Group</span></th>
+                    <th>{% translate "Leaders" %}<br><span class="m-1 fw-lighter badge bg-primary">{% translate "User" %}</span><span class="m-1 fw-lighter badge bg-secondary">{% translate "Group" %}</span></th>
                     <th class="text-center">{% trans "Action" %}</th>
                 </tr>
             </thead>
