--- a/securegroups/templates/smartgroups/user_check.html
+++ b/securegroups/templates/smartgroups/user_check.html
@@ -4,17 +4,22 @@
 {% endif %}
 <table class="table table-aa">
     <thead>
-        <th>{% translate 'Requirements' %}</th>
-        <th class="text-center">{% translate 'Note' %}</th>
-        <th class="text-right">{% translate 'Result' %}</th>
+        <tr>
+            <th>{% translate 'Requirements' %}</th>
+            <th class="text-center">{% translate 'Note' %}</th>
+            <th class="text-right">{% translate 'Result' %}</th>
+        </tr>
     </thead>
-{% for filter in filters %}
-    <tr>
-        <td>{{ filter.name }}</td>
-        <td class="text-center">{{ filter.message|safe }}</td>
-        <td>{% if filter.check %}<a class="pull-right btn btn-success" type="button" ><i class="fas fa-check-circle"></i></a>{% else %}<a class="pull-right btn btn-danger" type="button" ><i class="fas fa-times-circle"></i></a>{% endif %}</td>
-    </tr>
-{% endfor %}
+
+    <tbody>
+        {% for filter in filters %}
+            <tr>
+                <td>{{ filter.name }}</td>
+                <td class="text-center">{{ filter.message|safe }}</td>
+                <td>{% if filter.check %}<a class="pull-right btn btn-success" type="button" ><i class="fas fa-check-circle"></i></a>{% else %}<a class="pull-right btn btn-danger" type="button" ><i class="fas fa-times-circle"></i></a>{% endif %}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
 </table>
 
 <div class="col-xs-12">
